--- a/src/css/user-dashboard.css
+++ b/src/css/user-dashboard.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../assets/usa-army-logo.png');
+    background-image: url('/assets/usa-army_logo.png');
     background-size: 600px;
     background-position: center;
     opacity: 0.04;
